failsafe dependency