@@ -38,6 +38,10 @@
         <surefire.jacoco>${jacoco.agent}=destfile=${coverage.reportDir}/jacoco-ut.exec</surefire.jacoco>
         <surefire.badua>${badua.agent}</surefire.badua>
 
+        <!-- Failsafe -->
+        <failsafe.reportDir>${coverage.reportDir}/failsafe-reports</failsafe.reportDir>
+        <failsafe.jacoco>${jacoco.agent}=destfile=${coverage.reportDir}/jacoco-it.exec</failsafe.jacoco>
+
         <!-- Sonar -->
         <sonar.organization>livias1726</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -67,6 +71,38 @@
                             </argLine>
                             <reportsDirectory>${surefire.reportDir}</reportsDirectory>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <version>1.8.0</version>
+                        <configuration>
+                            <targetClasses>
+                                <param>com.alibaba.fastjson.JSON</param>
+                            </targetClasses>
+                            <targetTests>
+                                <param>src/test/java/TypeUtilsParameterizedTest.java</param>
+                            </targetTests>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>3.0.0-M6</version>
+                        <configuration>
+                            <argLine>
+                                -Xmx1024m -XX:MaxPermSize=256m ${surefire.jacoco}
+                            </argLine>
+                            <reportsDirectory>${failsafe.reportDir}</reportsDirectory>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -198,6 +234,18 @@
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>3.0.0-M6</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
